--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "gatsby": "^3.6.2",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sass": "^4.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sharp": "^3.14.3",
+    "gatsby-remark-images-contentful": "^5.23.0",
+    "gatsby-source-contentful": "^7.21.0",
     "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-sharp": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-sqip": "^4.23.0",
+    "gbimage-bridge": "^0.2.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
